BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/Commissioni_CIB__c.object-meta.xml
<CustomObject>
    <label>Commissioni CIB</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Commissioni CIB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissioni CIB</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>