BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commissioni CIB</relationshipLabel>
    <relationshipName>Commissioni_CIB</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>