BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/fields/Probabilit_di_accadimento_success_fee__c.field-meta.xml
<CustomField>
    <fullName>Probabilit_di_accadimento_success_fee__c</fullName>
    <formula>TEXT(Opportunity__r.Probabilita_di_successo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probabilità di accadimento success fee %</label>
    <type>Text</type>
</CustomField>