BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/fields/RecordTypeOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeOpportunity__c</fullName>
    <formula>Opportunity__r.RecordTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType Opportunità</label>
    <type>Text</type>
</CustomField>