BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/fields/Retainer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Fee__c</fullName>
    <label>Retainer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>