BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/fields/Success_Fee__c.field-meta.xml
<CustomField>
    <fullName>Success_Fee__c</fullName>
    <label>Success Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>