BPER/DEVF/force-app/main/default/objects/Commissioni_CIB__c/fields/Success_Fee_Ponderata__c.field-meta.xml
<CustomField>
    <fullName>Success_Fee_Ponderata__c</fullName>
    <formula>(Success_Fee__c * CASE(Probabilit_di_accadimento_success_fee__c, &apos;0%&apos;, 0,&apos;10%&apos;,10, &apos;25%&apos;, 25,&apos;50%&apos;,50,&apos;75%&apos;,75,&apos;90%&apos;,90,&apos;100%&apos;,100,0))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Fee Ponderata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>